--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -2,18 +2,18 @@ version: '3'
 
 services:
 
-  front-end-service:
-    build: 
-      context: ./../front-end
-      dockerfile: ./../front-end/front-end-service.dockerfile
-    restart: always
-    ports:
-      - "80:8081"
-    deploy:
-      mode: replicated
-      replicas: 1
-    environment:
-      BROKER_URL: http://localhost:8080
+  # front-end-service:
+  #   build: 
+  #     context: ./../front-end
+  #     dockerfile: ./../front-end/front-end-service.dockerfile
+  #   restart: always
+  #   ports:
+  #     - "80:8081"
+  #   deploy:
+  #     mode: replicated
+  #     replicas: 1
+  #   environment:
+  #     BROKER_URL: http://localhost:8080
 
 
   broker-service:
